@@ -1,0 +1,2 @@
+{# custom sidebar template #}
+<h4>Custom sidebar</h4>
